# pam_groupmember

./: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  pam_groupmember.8  pam_groupmember.c
debian/: changelog  control  copyright  libpam-groupmember.manpages
